<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_gravity="center"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/txtViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/formulario"
        android:textColor="@color/purple_500"
        android:textSize="25dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitulo">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNome"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="122dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutIdade"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="269dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputIdade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/idade" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/labelSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/sexo" />

        <RadioButton
            android:id="@+id/radioMasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/radioFem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feminino" />
    </RadioGroup>

    <TextView
        android:id="@+id/labelMusicas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:text="@string/estilo_musical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelMusicas">

        <CheckBox
            android:id="@+id/checkRock"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/rock"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="323dp" />

        <CheckBox
            android:id="@+id/checkSertanejo"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/sertanejo"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="323dp" />

        <CheckBox
            android:id="@+id/checkPagode"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/pagode"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="323dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear1">

        <CheckBox
            android:id="@+id/checkForro"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/forro"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="323dp" />

        <CheckBox
            android:id="@+id/checkPop"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/pop"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="323dp" />

        <CheckBox
            android:id="@+id/checkOutro"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/outro"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="323dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="click"
        android:text="@string/btn_cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear2" />

</androidx.constraintlayout.widget.ConstraintLayout>